--- a/InstagramFilter/Base.lproj/Main.storyboard
+++ b/InstagramFilter/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="116" id="10a-MP-auJ" customClass="FilteredTableViewCell" customModule="InstagramFilter" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FilteredTableViewCell" rowHeight="116" id="10a-MP-auJ" customClass="FilteredTableViewCell" customModule="InstagramFilter" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="116"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="10a-MP-auJ" id="6yq-3I-GT6">
