--- a/InstagramFilter/Base.lproj/Main.storyboard
+++ b/InstagramFilter/Base.lproj/Main.storyboard
@@ -52,6 +52,10 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="8lf-aR-5Ch"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="BKO-e7-DyN"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
