--- a/InstagramFilter/Base.lproj/Main.storyboard
+++ b/InstagramFilter/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="168" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ob2-Jb-BBr">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="168" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ob2-Jb-BBr">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -63,14 +63,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ob2-Jb-BBr" secondAttribute="bottom" id="9Ib-YN-Wvt"/>
-                            <constraint firstAttribute="trailing" secondItem="Ob2-Jb-BBr" secondAttribute="trailing" id="Hro-3O-RpR"/>
-                            <constraint firstItem="Ob2-Jb-BBr" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="J5l-d1-RYc"/>
-                            <constraint firstItem="Ob2-Jb-BBr" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="PiY-zu-IN0"/>
-                            <constraint firstItem="Ob2-Jb-BBr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="chs-wA-Epq"/>
-                            <constraint firstItem="Ob2-Jb-BBr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="f0B-h7-3oZ"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ob2-Jb-BBr" secondAttribute="bottom" id="nMh-I9-pPB"/>
-                            <constraint firstAttribute="trailing" secondItem="Ob2-Jb-BBr" secondAttribute="trailing" id="q7g-oc-fKG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ob2-Jb-BBr" secondAttribute="bottom" id="A2s-0y-gbR"/>
+                            <constraint firstItem="Ob2-Jb-BBr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="CTn-Ov-DMc"/>
+                            <constraint firstAttribute="trailing" secondItem="Ob2-Jb-BBr" secondAttribute="trailing" id="ayl-aY-vvF"/>
+                            <constraint firstItem="Ob2-Jb-BBr" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="sbr-1y-KAe"/>
                         </constraints>
                     </view>
                     <connections>
